--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,231 +1,220 @@
 body {
-    background-color: #F9FAFC;
+  background-color: #f9fafc;
 }
 
 .container-fluid,
 .blue-bg {
-    background-color: #013b94
+  background-color: #013b94;
 }
 
 .brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #4A4A4F;
+  font-family: Lato, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #4a4a4f;
 }
 
 .red-o {
-    color: #E84610;
+  color: #e84610;
 }
 
 .thin {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .light-bg {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .dark-bg {
-    background-color: #445261;
+  background-color: #445261;
 }
 
 .main-bg {
-    background-color: #F9FAFC;
+  background-color: #f9fafc;
 }
 
 .card {
-    border: none;
-    background-color: transparent;
+  border: none;
+  background-color: transparent;
 }
 
 .image-container {
-    position: relative;
-    border-radius: 20px;
+  position: relative;
+  border-radius: 20px;
 }
 
 .image-fluid {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .Price,
 .City {
-    color: #fff;
+  color: #fff;
 }
 
 .navbar {
-    padding: 0;
-    height: 80px;
+  padding: 0;
 }
 
 .navbar-brand {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .navbar-nav {
-    align-items: center;
+  align-items: center;
 }
 
 .nav-link {
-    font-size: 18px;
+  font-size: 18px;
 }
-
-
-
-/* Burger menu */
-
-/* .navbar-toggler-icon {
-    background-color: white;
-
-} */
 
 
 /* Carousel */
 
 .carousel-item {
-    position: relative;
+  position: relative;
 }
 
 .carousel-item::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
 .carousel-item h1,
 .carousel-item h4 {
-    position: relative;
-    z-index: 2;
-    color: white;
+  position: relative;
+  z-index: 2;
+  color: white;
 }
 
 .carousel-item img {
-    height: 400px;
-    width: 100%;
-    object-fit: cover;
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
 }
 
-
 .image-flash {
-    position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #0071cc;
+  position: absolute;
+  bottom: 5%;
+  min-width: 30%;
+  left: -2px;
+  background-color: #0071cc;
 }
 
 .image-flash-top-right {
-    position: absolute;
-    top: 5%;
-    min-width: 30%;
-    right: -2px;
+  position: absolute;
+  top: 5%;
+  min-width: 30%;
+  right: -2px;
 }
 
 .image-flash-top-left {
-    position: absolute;
-    top: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #0071cc;
+  position: absolute;
+  top: 5%;
+  min-width: 30%;
+  left: -2px;
+  background-color: #0071cc;
 }
 
 .author {
-    color: white;
-    margin: 4px;
-    text-transform: uppercase;
+  color: white;
+  margin: 4px;
+  text-transform: uppercase;
 }
 
 .masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
+  margin-top: 10px;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  height: 33vh;
+  width: 100%;
 }
 
 .masthead-text {
-    background-color: #445261;
-    color: white;
-    position: relative;
+  background-color: #445261;
+  color: white;
+  position: relative;
 }
 
 .masthead-image {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 90%;
+  height: 100%;
+  width: 150%;
+  background: #445261;
+  -webkit-transform: skew(15deg);
+  -moz-transform: skew(15deg);
+  transform: skew(15deg);
+  z-index: 100;
 }
 
 .post-link {
-    text-decoration: none;
-    color: #445261;
+  text-decoration: none;
+  color: #445261;
 }
 
 .post-link:hover,
 .page-link {
-    color: #0071cc;
+  color: #0071cc;
 }
 
 .post-title {
-    margin-top: 20%;
-    margin-left: 5%;
+  margin-top: 20%;
+  margin-left: 5%;
 }
 
 .post-subtitle {
-    margin-left: 5%;
-    color: lightgray;
+  margin-left: 5%;
+  color: lightgray;
 }
 
 .btn-signup {
-    background-color: #0071cc;
-    color: #fff;
+  background-color: #0071cc;
+  color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
-    background-color: #fff;
-    color: #0071cc;
+  background-color: #fff;
+  color: #0071cc;
 }
 
 .link {
-    color: #0071cc;
-    text-decoration: none;
+  color: #0071cc;
+  text-decoration: none;
 }
 
 .link:hover,
 .link:active {
-    color: #445261;
-    text-decoration: underline;
+  color: #445261;
+  text-decoration: underline;
 }
 
 .btn-like {
-    color: #E84610;
-    border: none;
-    background: transparent;
+  color: #e84610;
+  border: none;
+  background: transparent;
 }
 
 .btn-like:hover,
 .btn-like:active {
-    color: #E84610;
-    background: transparent;
-    border: none;
+  color: #e84610;
+  background: transparent;
+  border: none;
 }
