--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   <body class="d-flex flex-column h-100 main-bg">
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="{% url 'home' %}"
           >Booking Hotel</a
@@ -65,7 +65,7 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link text-white" href="{% url 'account_logout' %}"
+              <a class="nav-link text-white" href="{% url 'my_booking'%}"
                 >My booking</a
               >
             </li>
