--- a/templates/success_booking.html
+++ b/templates/success_booking.html
@@ -2,6 +2,10 @@
 <div class="container">
   <h1>Reservation completed successfully!</h1>
   <p>Thank you for choosing our hotel. Your booking was successful.</p>
-  <!-- Additional data and information for the user -->
+  <p>
+    You can view the details of your reservation on the
+    <a href="{% url 'my_booking' %}">My booking</a> page, or by clicking the
+    link below <a href="{% url 'my_booking' %}">View My Booking</a>
+  </p>
 </div>
 {% endblock %}
