--- a/templates/my_booking.html
+++ b/templates/my_booking.html
@@ -1,21 +1,54 @@
-{% extends 'base.html' %} {% block content %}
-<div class="container">
-  <h1>Booking Details</h1>
-  {% if bookings %} {% for booking in bookings %} 
-  {% if request.user == booking.customer %}
-
-  <p>City: {{ booking.room.hotel.city.city_name }}</p>
-  <p>Hotel: {{ booking.room.hotel.hotel_name }}</p>
-  <p>Room: {{ booking.room.room_name }}</p>
-  <p>Price: {{ booking.room.price }} €</p>
-  <p>Check-in Date: {{ booking.checking_date }}</p>
-  <p>Check-out Date: {{ booking.checkout_date }}</p>
-
-  {% endif %} {% endfor %} {% else %}
-  <p>
-    No bookings found for your account. Why not
-    <a href="{% url 'home' %}">book a room</a> now?
-  </p>
-  {% endif %}
-</div>
+{% extends 'base.html' %}
+{% block content %}
+<section class="section bg-white">
+    <div class="container text-center">
+        <h2 class="text-9 fw-500">Booking Details:</h2>
+        <div class="row">
+            <div class="col-12 mt-3 left">
+                <div class="row">
+                    {% if bookings %}
+                    {% for booking in bookings %}
+                    <div class="col-md-4">
+                        <div class="card mb-4 h-100">
+                            <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
+                                <div class="image-container">
+                                    <img class="card-img-top img-fluid rounded-4"
+                                        src="{{ booking.room.room_image.url }}" alt="image room">
+                                </div>
+                                <a href="{% url 'room_detail' booking.room.slug %}" class="post-link">
+                                    <p>City: {{ booking.room.hotel.city.city_name }}</p>
+                                    <p>Hotel: {{ booking.room.hotel.hotel_name }}</p>
+                                    <p>Room: {{ booking.room.room_name }}</p>
+                                    <p>Price: {{ booking.room.price }} €</p>
+                                    <p>Check-in Date: {{ booking.checking_date }}</p>
+                                    <p>Check-out Date: {{ booking.checkout_date }}</p>
+                                </a>
+                                {% if booking.is_cancelled %}
+                                <p>Status: Cancelled</p>
+                                {% else %}
+                                <form method="post" action="{% url 'cancel_booking' booking.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="cancel-booking-button">Cancel Booking</button>
+                                </form>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    {% if bookings %}
+                    {% if forloop.last %}
+                </div>
+                {% endif %}
+                {% endif %}
+                {% else %}
+                <p>
+                    No bookings found for your account. Why not
+                    <a href="{% url 'home' %}">book a room</a> now?
+                </p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
 {% endblock %}
