--- a/templates/booking.html
+++ b/templates/booking.html
@@ -14,7 +14,7 @@
             <div class="col-md-4 order-md-2 mb-4">
             <h5>Photo:</h5>
             <h5>City:</h5>
-            <h5>Hotek:</h5>
+            <h5>Hotel:</h5>
             <h5 style="font-size: 24px; margin-bottom: 20px;">Booking Room: {{ room.room_name }}</h5>
             </div>
             <div class="col-md-8 order-md-1">
