--- a/templates/hotel_detail.html
+++ b/templates/hotel_detail.html
@@ -6,9 +6,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <div class="card mb-3">
+            <div class="card bg-warning mb-3 mt-3">
                 <div class="card-body">
-                    <h5 class="card-title">Booking Details</h5>
+                    <h5 class="card-title">Search</h5>
                     <form method="post" action="{% url 'search' %}">
                         {% csrf_token %}
                         <div class="mb-3">
@@ -52,9 +52,12 @@
         <div class="col-md-6">
             <h3>Rooms in this Hotel</h3>
             <ul>
-                <li>Room 1</li>
-                <li>Room 2</li>
-                <li>Room 3</li>
+                {% for room in object.room_set.all %}
+                <li>
+                    <a href="{% url 'room_detail' room.slug %}">{{ room.room_name }}</a> - Price: {{ room.price }} - Description: {{
+                    room.description }}
+                </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
