--- a/templates/index.html
+++ b/templates/index.html
@@ -43,22 +43,24 @@
 
 <section class="section bg-white">
     <div class="container text-center">
-        <h2 class="text-9 fw-500">All Hotels</h2>
+        <h2 class="text-9 fw-500">Все отели</h2>
         <div class="row">
-            {% for hotel in object_list %}
+            {{ hotels|length }}
+            {% for hotel in hotels %}
             <div class="col-md-4">
                 <div class="card mb-4 h-100">
                     <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
                         <div class="image-container">
                             {% if hotel.hotel_image %}
-                            <img class="card-img-top img-fluid rounded-4" src="{{ hotel.hotel_image.url }}" alt="image hotel">
+                            <img class="card-img-top img-fluid rounded-4" src="{{ hotel.hotel_image.url }}"
+                                alt="фото отеля">
                             {% else %}
                             <img class="card-img-top img-fluid"
                                 src="https://services.meteored.com/img/article/como-podemos-distinguir-los-planetas-de-las-estrellas-1679732078853_1024.jpeg"
-                                alt="image planet">
+                                alt="фото планеты">
                             {% endif %}
                             <div class="image-flash-top-left">
-                                <p class="City">{{ hotel.city.city_name }}</p>
+                                <p class="Город">{{ hotel.city.city_name }}</p>
                             </div>
                         </div>
                         <a href="{% url 'hotel_detail' hotel.slug %}" class="post-link">
@@ -73,6 +75,7 @@
     </div>
 </section>
 
+
 <section class="section bg-white">
     <div class="container text-center">
         <h2 class="text-9 fw-500">Offers</h2>
@@ -80,7 +83,7 @@
         <div class="row">
             <div class="col-12 mt-3 left">
                 <div class="row">
-                {% for room in room_list%}
+                {% for room in rooms%}
                     <div class="col-md-4">
                         <div class="card mb-4 h-100">
                             <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
